--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,5 @@ jobs:
         cp .env.example .env
         php artisan key:generate
  
-    
+    - name: Run Tests
+      run: vendor/bin/phpunit tests/
