--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,12 @@ jobs:
  
     - name: Install composer dependencies
       run: |
+		composer update
         composer install --no-scripts
  
     - name: Prepare Laravel Application
       run: |
-        cp .env.example .env
+        php -r "file_exists('.env') || copy('.env.example', '.env');"
         php artisan key:generate
  
     - name: Run Tests
